--- a/src/constants/translations/en/become-tutor.json
+++ b/src/constants/translations/en/become-tutor.json
@@ -2,7 +2,11 @@
   "generalInfo": {
     "title": "Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.",
     "textFieldLabel": "Describe in short your professional status",
-    "helperText": "Inputs with the * sign are required"
+    "helperText": "Inputs with the * sign are required",
+    "firstNameTextField": "First Name",
+    "lastNameTextField": "Last Name",
+    "countryLabel": "Country",
+    "cityLabel": "City"
   },
   "experience": {
     "title": "Describe your professional experience. Maximum 70 characters.",
@@ -28,5 +32,14 @@
     "typeError": "Wrong file type. Only .png/.jpg/.jpeg files are allowed.",
     "fileSizeError": "Size for one file cannot be more than 10MB."
   },
-  "successMessage": "Success! Your data were added."
+  "successMessage": "Success! Your data were added.",
+  "errorMessages": {
+    "generalInfo": {
+      "firstName": "",
+      "lastName": "",
+      "country": "",
+      "city": "",
+      "professionalSummary": ""
+    }
+  }
 }
