--- a/src/constants/translations/ua/become-tutor.json
+++ b/src/constants/translations/ua/become-tutor.json
@@ -8,7 +8,11 @@
   "generalInfo": {
     "title": "Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.",
     "textFieldLabel": "Коротко опишіть свій професійний статус",
-    "helperText": "Поля зі знаком * є обов'язковими"
+    "helperText": "Поля зі знаком * є обов'язковими",
+    "firstNameTextField": "Ім'я",
+    "lastNameTextField": "Прізвище",
+    "countryLabel": "Країна",
+    "cityLabel": "Місто"
   },
   "experience": {
     "title": "Опишіть свій професійний досвід. Максимум 70 символів.",
@@ -34,5 +38,14 @@
 	"typeError": "Неправильний тип файлу. Дозволяються лише файли .png/.jpg/.jpeg.",
 	"fileSizeError": "Розмір одного файлу не може перевищувати 10 Мб."
   },
-  "successMessage": "Успішно! Ваші дані додано."
+  "successMessage": "Успішно! Ваші дані додано.",
+  "errorMessages": {
+    "generalInfo": {
+      "firstName": "",
+      "lastName": "",
+      "country": "",
+      "city": "",
+      "professionalSummary": ""
+    }
+  }
 }
