general info step: styles fixed and added & context refactored and connected & inputs validation added (#103)
* general info page: styles added + validation set up + shared components styles fixes

* general info page: validation fixed and added + styles fixed

* GeneralInfoForm values connected to context

* step-context refactored

* language and photo steps refactored using updated context

* comments cleanup

--- a/src/constants/translations/ua/become-tutor.json
+++ b/src/constants/translations/ua/become-tutor.json
@@ -6,9 +6,11 @@
     "photo": "Фото"
   },
   "generalInfo": {
-    "title": "Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.",
+    "title": "Будь ласка, заповніть реєстраційну форму, щоб отримати найкращий досвід.",
     "textFieldLabel": "Коротко опишіть свій професійний статус",
-    "helperText": "Поля зі знаком * є обов'язковими"
+    "helperText": "Поля зі знаком * є обов'язковими",
+    "countryLabel": "Країна",
+    "cityLabel": "Місто"
   },
   "experience": {
     "title": "Опишіть свій професійний досвід. Максимум 70 символів.",
