--- a/src/constants/translations/en/step.json
+++ b/src/constants/translations/en/step.json
@@ -5,5 +5,6 @@
     "language": "Language",
     "subjects": "Subjects",
     "photo": "Photo"
-  }
+  },
+  "finishTip": "Required fields should be filled in the before finishing"
 }
