stepData final format updated (stepDataCleanup func)

--- a/src/constants/translations/en/step.json
+++ b/src/constants/translations/en/step.json
@@ -6,5 +6,5 @@
     "subjects": "Subjects",
     "photo": "Photo"
   },
-  "finishTip": "Required fields should be filled in the before finishing"
+  "finishTip": "Required fields should be filled in before finishing"
 }
